styles/style.css
* {
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: #f5f5f5;
  font-family: "Montserrat", sans-serif;
  font-size: 1rem;
  line-height: 1.5;
}

#header-img {
  display: block;
  margin: 0 auto;
  width: 95%;
  max-width: 800px;
}

.image {
  display: block;
  margin: 0 auto 1rem;
  width: 95%;
  max-width: 800px;
  border-radius: 5px;
}

.center {
  text-align: center;
}

nav {
  position: fixed;
  top: 0;
  right: 0;
  background-color: #eaa5a2;
  border-radius: 5px;
  margin-top: 20px;
  margin-right: 20px;
  overflow: hidden;
  text-align: right;
}

nav a {
  display: inline-block;
  padding: 10px 15px 10px 15px;
  text-decoration: none;
  color: #fff;
  border-radius: 5px;
  background-color: #eaa5a2;
  transition: background-color 0.25s;
}

nav a:hover {
  background-color: #ec615b;
}

.nav-bar .icon {
  display: none;
}

h1 {
  font-family: "Pacifico", cursive;
  font-size: 5rem;
  color: #5222d0;
  text-shadow: 2px 2px 4px #9d85dc;
  margin-bottom: 1rem;
}

h2 {
  font-family: "Pacifico", cursive;
  font-size: 3.5rem;
  color: #ec615b;
  padding-top: 4rem;
  margin-bottom: 1rem;
  text-shadow: 1px 1px 2px #eaa5a2;
}

h3 {
  font-family: "Pacifico", cursive;
  font-size: 2rem;
  color: #9d85dc;
  padding-top: 1rem;
  margin-bottom: 1rem;
}

.subtitle {
  font-family: "Montserrat", sans-serif;
  font-size: 2rem;
  color: #9d85dc;
}

.small-sub {
  font-size: 1rem;
  color: #9d85dc;
  margin-bottom: 4rem;
}

.section {
  margin: 0 auto 100px;
  max-width: 800px;
  box-sizing: border-box;
  border-radius: 5px;
  padding: 1rem 1rem 2rem;
  background-color: #fff;
  box-shadow: 0 1px 1px -1px rgba(0, 0, 0, 0.15), 0 1px 2px 0 rgba(0, 0, 0, 0.1),
    0 1px 4px 0 rgba(0, 0, 0, 0.1);
}

.big-section-wrap {
  background-color: #fff;
  max-width: 1400px;
  max-width: 100%;
  margin: 0 auto 100px;
  box-sizing: border-box;
  border-radius: 5px;
  padding: 1.5rem 1.5rem 2.5rem;
  box-shadow: 0 1px 1px -1px rgba(0, 0, 0, 0.15), 0 1px 2px 0 rgba(0, 0, 0, 0.1),
    0 1px 4px 0 rgba(0, 0, 0, 0.1);
}

.big-section {
  display: grid;
  grid-template-columns: auto auto auto;
  gap: 2rem;
}

.one-of-three {
  max-width: 1000px;
  margin: 0 auto;
  background-color: #fff;
  border-radius: 5px;
  padding: 0.5rem 0.5rem 2rem 0.5rem;
  box-shadow: 0 1px 1px -1px rgba(0, 0, 0, 0.15), 0 1px 2px 0 rgba(0, 0, 0, 0.1),
    0 1px 4px 0 rgba(0, 0, 0, 0.1);
}

.image-smaller {
  display: block;
  max-width: 50%;
  height: 200px;
  margin: 0 auto;
  background-image: radial-gradient(#c3b7e2, #fff, #fff);
}

.sign-up {
  margin-top: 2rem;
}

.sign-up a {
  box-sizing: border-box;
  font-size: 1.25rem;
  border-radius: 5px;
  background-color: #9d85dc;
  text-decoration: none;
  color: #fff;
  padding: 10px;
  transition: background-color 0.25s;
}

.space-above {
  margin-top: 2rem;
}

.sign-up a:hover,
.sign-up-small a:hover {
  background-color: #5222d0;
}

.description {
  margin-bottom: 25px;
}

.flex {
  width: 500px;
  margin: 0 auto;
  padding-top: 50px;
}

.flex-wrap:after {
  content: "";
  display: table;
  clear: both;
}

.left {
  margin-bottom: 5px;
  float: left;
  width: 25%;
}

.right {
  margin-bottom: 5px;
  float: left;
  width: 75%;
}

.right-right {
  float: right;
}

.label-gap {
  margin-top: 20px;
}
.hidden {
  display: none;
}

input,
textarea {
  box-sizing: border-box;
  border: 2px solid #9d85dc;
  border-radius: 5px;
  padding: 5px;
  resize: vertical;
}

#submit {
  margin-top: 5px;
  font-size: 1.25rem;
  cursor: pointer;
  border: none;
  border-radius: 5px;
  background-color: #9d85dc;
  text-decoration: none;
  color: #fff;
  padding: 10px;
  transition: background-color 0.25s;
}

#submit:hover {
  background-color: #5222d0;
}

#form {
  background-color: #fff;
  padding: 0.5rem;
  border-radius: 3px;
}

footer {
  border-top: 1px solid #fff;
  background-color: #e9d8d7;
}

.footer-wrap {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  max-width: 500px;
  margin: 0 auto;
  padding: 1rem;
}

.footer-wrap a {
  padding-top: 1rem;
  text-decoration: none;
  color: #000;
}

.copyright {
  margin-top: 1rem;
  padding-bottom: 1rem;
  text-align: center;
  font-size: 0.875rem;
}

footer p i {
  padding-right: 0.25rem;
  vertical-align: middle;
  color: #000;
}

@media (max-width: 600px) {
  .footer-wrap {
    flex-direction: column;
  }
  label {
    padding-top: 1rem;
  }
}

@media (max-width: 600px) {
  .flex {
    max-width: 100%;
  }
  .left,
  .right,
  #submit {
    width: 100%;
    max-width: 500px;
  }
}

@media (max-width: 750px) {
  .big-section {
    display: grid;
    grid-template-columns: auto;
    gap: 1rem;
  }
  .big-section-wrap {
    padding: 0.5rem 0.5rem 1.5rem;
  }
}

@media screen and (max-width: 900px) {
  .nav-bar a:not(:first-child) {
    display: none;
  }
  .nav-bar a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 900px) {
  .nav-bar.responsive {
    position: fixed;
  }
  .nav-bar.responsive a.icon {
    position: fixed;
    right: 20px;
    top: 20px;
  }
  .nav-bar.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}

